--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="https://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <link th:replace="partials/links :: links">
 </head>
 <body>
-$END$
+<header th:replace="partials/header :: header"></header>
+<div th:include="partials/navbar :: navbar"></div>
+
+<main class="container">
+    <form action="posts/create" method="POST">
+        <label for="title">Enter Post Title</label>
+        <input type="text" id="title" name="title"/>
+        <label for="body">Enter your post: </label>
+        <textarea namde="body" id="body" cols="72" rows="4"></textarea>
+        <button></button>
+    </form>
+</main>
+
+<footer th:replace="partials/footer :: footer"></footer>
+<scripts th:replace="partials/scripts :: scripts"></scripts>
 </body>
 </html>
