--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Show</title>
+    <title>Show Post</title>
+    <link th:replace="partials/links :: links"/>
 </head>
 <body>
-<h1>Here is the post!</h1>
+<div th:replace="partials/header :: header"></div>
+<nav th:replace="partials/navbar :: navbar"/>
 
+<main class="container">
+    <show_post th:if="${post}">
+        <h2 th:text="${post.title}"></h2>
+        <p th:text="${post.body}"></p>
+        <form style="display: inline" th:action="@{'/ads/edit/' + ${post.id}}"><button>Edit</button></form>
+        <form style="display: inline" th:action="@{'/ads/delete/' + ${post.id}}"><button>Delete</button></form>
+    </show_post>
+</main>
 
+<div th:replace="partials/footer_nav :: footer_nav"></div>
+<div th:replace="partials/scripts :: scripts"/>
 </body>
 </html>
