--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link th:replace="partials/links :: links">
+    <title>Create Ad</title>
+    <div th:replace="partials/links :: links"/>
 </head>
 <body>
-<header th:replace="partials/header :: header"></header>
-<div th:include="partials/navbar :: navbar"></div>
+<nav th:replace="partials/navbar :: navbar"/>
 
 <main class="container">
-    <form action="posts/create" method="POST">
-        <label for="title">Enter Post Title</label>
-        <input type="text" id="title" name="title"/>
-        <label for="body">Enter your post: </label>
-        <textarea namde="body" id="body" cols="72" rows="4"></textarea>
-        <button></button>
+    <form action="/posts/create" method="post">
+        <label for="title">Enter The Topic: </label>
+        <input type="text" id="title" name="title"><br>
+        <label for="body">Type in the blog post:</label><br>
+        <textarea name="body" id="body" cols="72" rows="5"></textarea><br>
+        <button>Submit</button>
     </form>
 </main>
 
-<footer th:replace="partials/footer :: footer"></footer>
-<scripts th:replace="partials/scripts :: scripts"></scripts>
+<div th:replace="partials/scripts :: scripts"/>
+</body>
 </body>
 </html>
