--- a/src/main/resources/templates/roll-dice.html
+++ b/src/main/resources/templates/roll-dice.html
@@ -5,11 +5,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Roll Dice</title>
-    <link th:replace="partials/header :: bootstrap">
-    <link th:replace="partials/header :: css">
+<!--    <link th:replace="partials/header :: bootstrap">-->
+<!--    <link th:replace="partials/header :: css">-->
 </head>
 <body>
-<div th:include="partials/navbar :: navbar">
+<!--<div th:include="partials/navbar :: navbar">-->
 </div>
 <div>
     <h1>Guess a number!</h1>
