--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-<html xmlns:th="http://www.thymeleaf.org">
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Index</title>
+    <title>Show Post List</title>
+    <link th:replace="partials/links :: links"/>
 </head>
 <body>
-<h1>Here are all the posts!</h1>
+<div th:replace="partials/header :: header"></div>
+<nav th:replace="partials/navbar :: navbar"/>
 
 <main class="container">
-    <show_post th:if="${posts}">
-        <div th:each="item : ${posts}">
-            <h2 th:text="${item.title}"></h2>
-            <p th:text="${item.body}"></p>
+    <show_posts th:if="${postList}">
+        <div th:each="item : ${postList}">
+            <form th:action="@{'/posts/' + ${item.id}}">
+                <h2 th:text="${item.title}" />
+                <p th:text="${item.body}" />
+                <button>View</button>
+            </form>
         </div>
-    </show_post>
+    </show_posts>
 </main>
 
-</div>
+<div th:replace="partials/footer_nav :: footer_nav"></div>
+<div th:replace="partials/scripts :: scripts"/>
 </body>
 </html>
