--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -10,11 +10,11 @@
 <nav th:replace="partials/navbar :: navbar"/>
 
 <main class="container">
-    <form action="/posts/create" method="post">
+    <form th:action="@{/posts/create}" th:method="post" th:object="${post}">
         <label for="title">Enter The Topic: </label>
-        <input type="text" id="title" name="title"><br>
+        <input type="text" id="title" th:field="*{title}"><br>
         <label for="body">Type in the blog post:</label><br>
-        <textarea name="body" id="body" cols="72" rows="5"></textarea><br>
+        <textarea th:field="*{body}" id="body" cols="72" rows="5"></textarea><br>
         <button>Submit</button>
     </form>
 </main>
