--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -1,5 +1,7 @@
-<html xmlns:th="http://www.thymeleaf.org">
-<div th:fragment="navbar">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<standard_links th:fragment="navbar">
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light topnav">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,29 +11,45 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/hello/there">Hello</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/join">Join</a>
+                <!-- If the user is not logged in (anonymous to the site), display the login form and register button -->
+                <li sec:authorize="isAnonymous()" class="nav-item">
+                    <a class="nav-link" href="/sign-up">Sign Up</a>
+                </li>
+                <li sec:authorize="isAnonymous()" class="nav-item">
+                    <a class="nav-link" href="/login">Login</a>
+                </li>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Ad Menu
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/ads">Ads List</a>
+                        <a class="dropdown-item" href="/ads/create">Ads Create</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/roll-dice">Roll Dice</a>
+                    </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Post Menu
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/post/1">Show Post</a>
-                        <a class="dropdown-item" href="/post">Post List</a>
-                        <a class="dropdown-item" href="/roll-dice">Roll Dice</a>
-                        <a class="dropdown-item" href="/ads">Show Ads</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item" href="/posts">Post List</a>
+                        <a class="dropdown-item" href="/posts/create">Post Create</a>
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
+
+                <!-- If the user is already logged in / authenticated, display the logout button (form) -->
+                <li sec:authorize="isAuthenticated()" class="nav-item">
+                    <form th:action="@{/logout}" th:method="post">
+                        <button class="btn-link btn" style="margin-top: 8px">Logout</button>
+                    </form>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -40,4 +58,4 @@
             </form>
         </div>
     </nav>
-</div>
+</standard_links>
